--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -21,6 +21,7 @@
 		"react-plx": "^2.1.2",
 		"react-progressive-image": "^0.6.0",
 		"react-reveal": "^1.2.2",
+		"react-router-dom": "^6.24.1",
 		"react-scripts": "^5.0.1",
 		"react-scroll": "^1.8.2",
 		"react-slick": "^0.28.1",
